Enable JUnit tests and porting to java 17
JUnit tests are no more executed: spring-boot-starter-test does not execute any junit4 tests by default
Fix enable tests and adopts the tests moslty to java 17 runtime

Issue-ID: CCSDK-3859
Signed-off-by: Frank Kimmlingen <frank.kimmlingen@telekom.de>
Signed-off-by: Lukasz Rajewski <lukasz.rajewski@t-mobile.pl>
Change-Id: I02a8d25350ca62262bfc6e07c2865cd8d7b4e6b2